# tracktrain

./: .gitignore  README.md  VariationalEncoderDecoder.py  compile_and_train.py  pyproject.toml
examples/: UT_ASOS_Mar_2023.csv  data_loaders.py  preprocess.py  train_multiple.py  train_one.py
examples/models/test-0/: test-0_config.json  test-0_final.weights.hdf5  test-0_prog.csv  test-0_summary.txt
tracktrain/: ModelDir.py  ModelLook.py  VariationalEncoderDecoder.py  __init__.py  compile_and_train.py  config.py  model_methods.py  old_methods.py  tmp.py  utils.py
