# setuptools-driven build system per PEP 518
[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "tracktrain"
version = "1.0.0"
description = ""
dependencies = [
  "numpy",
  "tensorflow>=2.14"
]

[tool.setuptools]
packages = [
    "tracktrain",
    ]


